# droculus

./: .gitignore  README.md
flying/: drone.js  mission-1421342516246.txt  mission-2015-01-16_11-02-16.txt  mission-Flight2015-01-16_11-05-31.txt  mission-Flight2015-01-16_11-06-29.txt  server.js  socket_server.js
tracking/: CMakeCache.txt  CMakeLists.txt  Makefile  MarkerTrackerBW.cbp  cmake_install.cmake  markerTrackerTest  tracking
tracking/assets/: camera_calibration_bottom.yml  camera_calibration_front.yml
tracking/include/: communicator.hpp  markerBW.hpp  markerDetectorBW.hpp  pose.hpp
tracking/src/: communicator.cpp  main.cpp  markerBW.cpp  markerDetectorBW.cpp  pose.cpp
